fix arg names, hook id

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,7 +1,7 @@
-- id: last-modified-hook
+- id: last-modified
   name: Last Modified Hook
   description: Make a description here
   entry: last-modified-hook
   language: python
   types: [python]
-  args: ["--seconds", "--line_limit", "--line_template"]
+  args: ["--seconds", "--line-limit", "--line-template"]
