--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,61 +1,52 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
 
 [project]
 name = "last-modified-hook"
 description = 'A pre-commit hook That updates a last_modified comment field in python source code files.'
+version = 'v0.0.4'
 readme = "README.md"
-requires-python = ">=3.7"
-license = "MIT"
+requires-python = ">=3.10"
+license = { file = "LICENSE" }
 keywords = ["python", "pre-commit", "hook"]
-authors = [{ name = "Chad Lowe", email = "pfmsoft.dev@gmail.com" }]
+authors = [{ name = "Chad Lowe" }, { email = "pfmsoft.dev@gmail.com" }]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
-  "Programming Language :: Python :: 3.7",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
+  "License :: OSI Approved :: MIT License",
 ]
 dependencies = []
-dynamic = ["version"]
 [project.optional-dependencies]
 dev = [
 
+  # Automation
+  "nox",
+  "pre-commit",
+
   # Linting and Formatting
   "black",
-  "coverage",
-  "pylint",
-  "mypy",
-  # "doc8",
-
-  # Testing
-  "tox",
-  "pytest",
-  "pytest-cov",
-
-  # Source control
-  "pre-commit",
+  "isort",
 
   # Tools
   "pysnooper",
-
+]
+lint = ["pylint", "mypy"]
+doc = [
   # Documentation
   "Sphinx",
   "sphinx-autobuild",
   "sphinx-autodoc-typehints",
   "sphinx_rtd_theme",
   "myst-parser",
-
-  # Vscode
-  "esbonio",
-  "rst2html",
-  "rstcheck",
+  "sphinx-argparse",
 ]
+vscode = ["esbonio", "rst2html", "rstcheck"]
+testing = ["pytest", "coverage", "pytest-cov"]
 
 
 [project.scripts]
@@ -90,20 +81,10 @@ max-line-length = "95"
 
 [project.urls]
 Documentation = "https://github.com/DonalChilde/last-modified-hook#readme"
+Documentation_rtd = "https://last-modified-hook.readthedocs.io"
 Issues = "https://github.com/DonalChilde/last-modified-hook/issues"
 Source = "https://github.com/DonalChilde/last-modified-hook"
 
-[tool.hatch.version]
-path = "src/last_modified_hook/__about__.py"
-
-[tool.hatch.envs.default]
-dependencies = ["pytest", "pytest-cov"]
-[tool.hatch.envs.default.scripts]
-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/last_modified_hook --cov=tests {args}"
-no-cov = "cov --no-cov {args}"
-
-[[tool.hatch.envs.test.matrix]]
-python = ["37", "38", "39", "310", "311"]
 
 [tool.coverage.run]
 branch = true
